--- a/source/Firebase/Storage/Storage.csproj
+++ b/source/Firebase/Storage/Storage.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>Xamarin.iOS10</TargetFrameworks>
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <NativeReference Include="..\..\externals\FirebaseStorage.framework">
+    <NativeReference Include="..\..\..\externals\FirebaseStorage.framework">
       <Kind>Framework</Kind>
       <Frameworks>MobileCoreServices</Frameworks>
       <ForceLoad>True</ForceLoad>
