--- a/source/Firebase/InstanceID/InstanceID.csproj
+++ b/source/Firebase/InstanceID/InstanceID.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.InstanceID</RootNamespace>
     <AssemblyName>Firebase.InstanceID</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>3.4.0</FileVersion>
+    <FileVersion>4.2.1</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865551</PackageProjectUrl>
     <PackageLicenseUrl>https://go.microsoft.com/fwlink/?linkid=865555</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>3.4.0</PackageVersion>
+    <PackageVersion>4.2.1</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,7 +35,19 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="InstanceID.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.InstanceID.targets" />
+    <None Include="..\..\..\externals\FirebaseInstanceID.framework\FirebaseInstanceID">
+      <Link>FirebaseInstanceID.framework</Link>
+    </None>
+    <None Include="External-Dependency-Info.txt" Pack="True" PackagePath="THIRD-PARTY-NOTICES.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <NativeReference Include="..\..\..\externals\FirebaseInstanceID.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+      <LinkerFlags>-ObjC</LinkerFlags>
+      <Frameworks>Security</Frameworks>
+    </NativeReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -61,4 +73,12 @@
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
+
+  <!-- We are embedding a framework using NativeReference tag but, on Windows with .NET Core project, 
+     this tags means another thing. On windows, if a NativeReference exists it creates a file named
+     Native.$(AssemblyName).manifest which on macOS is not being generated. This is just to satisfy
+     the MSBuild packing process as it's looking for it. It seems not to be packed in the end. -->
+  <Target Name="_TouchNativeManifestWorkaround" BeforeTargets="GenerateNuspec" Condition="!Exists('$(OutputPath)$(TargetFrameworks)\Native.$(AssemblyName).manifest')">
+    <Touch Files="$(OutputPath)$(TargetFrameworks)\Native.$(AssemblyName).manifest" AlwaysCreate="True" />
+  </Target>
 </Project>
