add dependency of PerformanceMonitoring to RemoteConfig

--- a/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.csproj
+++ b/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.csproj
@@ -60,6 +60,7 @@
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
     <ProjectReference Include="..\Analytics\Analytics.csproj" />
+    <ProjectReference Include="..\RemoteConfig\RemoteConfig.csproj" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
