[Firebase][AdMob] Updated to version 7.47.0 (Firebase v6.5.0) * Added Firebase.Core.targets to samples

--- a/samples/Firebase/Invites/InvitesSample/InvitesSample.csproj
+++ b/samples/Firebase/Invites/InvitesSample/InvitesSample.csproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Analytics\Analytics.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\DynamicLinks\DynamicLinks.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\SignIn\SignIn.targets" />
