--- a/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
+++ b/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
@@ -158,6 +158,7 @@
     <BundleResource Include="Resources\ImageLabeling.png" />
     <BundleResource Include="Resources\LandmarkRecognition.png" />
   </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit\MLKit.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
