--- a/source/Firebase/Core/Core.csproj
+++ b/source/Firebase/Core/Core.csproj
@@ -33,6 +33,10 @@
   <ItemGroup>
     <Folder Include="Resources\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Core.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.Core.targets" />
+  </ItemGroup>
   
   <ItemGroup>
     <None Include="..\..\..\externals\FirebaseCore.framework\FirebaseCore">
