--- a/source/Firebase/Auth/Auth.csproj
+++ b/source/Firebase/Auth/Auth.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.Auth</RootNamespace>
     <AssemblyName>Firebase.Auth</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>5.0.4.1</FileVersion>
+    <FileVersion>6.2.1</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865530</PackageProjectUrl>
     <PackageLicenseUrl>https://go.microsoft.com/fwlink/?linkid=865534</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>5.0.4.1</PackageVersion>
+    <PackageVersion>6.2.1</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,7 +44,7 @@
   <ItemGroup>
     <NativeReference Include="..\..\..\externals\FirebaseAuth.framework">
       <Kind>Framework</Kind>
-      <Frameworks>Security</Frameworks>
+      <Frameworks>Security SafariServices</Frameworks>
       <LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
       <ForceLoad>True</ForceLoad>
     </NativeReference>
