--- a/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.targets
+++ b/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.targets
@@ -2,19 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebasePerformanceMonitoringAssemblyName>Firebase.PerformanceMonitoring, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebasePerformanceMonitoringAssemblyName>
-		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-2.2.2</_FirebasePerformanceMonitoringItemsFolder>
+		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-3.1.1</_FirebasePerformanceMonitoringItemsFolder>
 		<_FirebasePerformanceMonitoringSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebasePerformanceMonitoringItemsFolder)\Frameworks\</_FirebasePerformanceMonitoringSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebasePerformanceMonitoringItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/997246e3de153efe/FirebasePerformance-2.2.2.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/8397df6fcb790e44/FirebasePerformance-3.1.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_FirebasePerformanceMonitoringSDKBaseFolder)FirebasePerformance.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++</LinkerFlags>
-			<Frameworks>CoreTelephony SystemConfiguration</Frameworks>
+			<Frameworks>CoreTelephony QuartzCore SystemConfiguration</Frameworks>
 		</NativeReference>
 	</ItemGroup>
 </Project>
