--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ jobs:
           dotnet tool install -g api-tools --version $(API_TOOLS_VERSION)
           dotnet tool install -g cake.tool --version $(CAKE_VERSION)
         displayName: 'Install .NET Core global tools'
-      - powershell: |
+      - bash: |
           dotnet-cake --target=build --sdks=$(SdksNames) --verbosity=$(VERBOSITY)
         displayName: 'Run build'
       - powershell: |
