Removed cake.packages.config to avoid conflict with solution restore * Changed sdks argument name to names

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,7 +96,7 @@ jobs:
           provisioningProfileLocation: 'secureFiles'
           provProfileSecureFile: 'Components iOS Provisioning.mobileprovision'
       - bash: |
-          dotnet-cake --target=build --sdks=$(SdksNames) --verbosity=$(VERBOSITY)
+          dotnet-cake --target=build --names=$(SdksNames) --verbosity=$(VERBOSITY)
         displayName: 'Run build'
       - powershell: |
           if (Get-ChildItem artifacts -Filter *.nupkg) {
