we can't build ios on windows...

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ jobs:
       timeoutInMinutes: 180
       cakeTarget: 'build'
       cakeExtraArgs: '--names=$(SdksNames)'
-
+      windowsImage: ''
   - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
     - template: sign-artifacts/jobs/v1.yml@internal-templates
       parameters:
