--- a/source/Google/Cast/Cast.csproj
+++ b/source/Google/Cast/Cast.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Google.Cast</RootNamespace>
     <AssemblyName>Google.Cast</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>4.4.2</FileVersion>
+    <FileVersion>4.4.5</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865570</PackageProjectUrl>
     <PackageLicenseUrl>https://go.microsoft.com/fwlink/?linkid=865574</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>4.4.2</PackageVersion>
+    <PackageVersion>4.4.5</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -36,6 +36,8 @@
   
   <ItemGroup>
     <None Include="Cast.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.Cast.targets" />
+    <None Include="Cast.props" Pack="True" PackagePath="build/Xamarin.Google.iOS.Cast.props" />
+    <None Include="readme.txt" Pack="True" PackagePath="readme.txt" />
   </ItemGroup>
 
   <ItemGroup>
