--- a/source/Google/Places/Places.targets
+++ b/source/Google/Places/Places.targets
@@ -3,13 +3,13 @@
 
     <PropertyGroup>
         <_GooglePlacesAssemblyName>Google.Places, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GooglePlacesAssemblyName>
-        <_GooglePlacesItemsFolder>GPlcs-3.1.0</_GooglePlacesItemsFolder>
+        <_GooglePlacesItemsFolder>GPlcs-3.5.0</_GooglePlacesItemsFolder>
 		<_GooglePlacesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GooglePlacesItemsFolder)\Frameworks\</_GooglePlacesSDKBaseFolder>
     </PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GooglePlacesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/bf9e64756ecb3c98/GooglePlaces-3.1.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/00b161ce89d5920d/GooglePlaces-3.5.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework">
@@ -30,28 +30,28 @@
 				<LogicalName>__monotouch_content_GooglePlaces.bundle_foss__licenses__places.txt.gz</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-dark.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-dark.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-black.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-black.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-dark%402x.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-dark%402x.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-black%402x.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-black%402x.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-dark%403x.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-dark%403x.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-black%403x.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-black%403x.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-light.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-light.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-white.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-white.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-light%402x.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-light%402x.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-white%402x.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-white%402x.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\powered-by-google-light%403x.png">
-				<LogicalName>__monotouch_content_GooglePlaces.bundle_fpowered-by-google-light%403x.png</LogicalName>
+			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\build-with-google-white%403x.png">
+				<LogicalName>__monotouch_content_GooglePlaces.bundle_fbuild-with-google-white%403x.png</LogicalName>
 				<AssemblyName>$(_GooglePlacesAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework\Resources\GooglePlaces.bundle\sad_cloud.png">
