--- a/source/Firebase/MLKit.Common/MLKit.Common.csproj
+++ b/source/Firebase/MLKit.Common/MLKit.Common.csproj
@@ -58,6 +58,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
