[Firebase][MLKit.NaturalLanguage] Added a sample

--- a/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
+++ b/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
@@ -145,6 +145,10 @@
       <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
       <Name>MLKit</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\source\Firebase\InstanceID\InstanceID.csproj">
+      <Project>{754D8F56-C3DB-4E33-91D5-45445AB286EF}</Project>
+      <Name>InstanceID</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
       <Project>{9335A59B-3B54-4ED5-8201-B68CFD05CAFB}</Project>
       <Name>Core</Name>
